Wed Sep  9 11:45:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_data_type): typed.

	* enumerator.c (enumerator_data_type): typed.
	  (yielder_data_type, generator_data_type): ditto.

Wed Sep  9 11:11:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_data_type_struct): constified dsize.

Wed Sep  9 11:07:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (cont_memsize): fixed wrong expression on IA64.

Wed Sep  9 10:51:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (cont_restore_1, rb_cont_call): should be Fiber.

Wed Sep  9 00:27:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (cont_data_type, fiber_data_type): typed.

Tue Sep  8 22:37:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb, lib/tmpdir.rb (Tmpname): extracted new module.
	  [ruby-dev:39197]

Tue Sep  8 22:18:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (st_init_*table_with_size): use st_index_t.

	* include/ruby/st.h (st_hash_func): use st_index_t.

Tue Sep  8 21:48:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_mark): mark callers iseqs.  [ruby-core:25474]
	  [Bug #2062]

Tue Sep  8 11:53:58 2009  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_mark): no need to mark inline cache entries.

	* insns.def (onceinlinecache, setinlinecache): save a value
	  to mark cached value.

Tue Sep  8 08:32:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/dl/test_{cfunc,ptr}.rb: added tests from Aaron Patterson.
	  see [ruby-dev:39249].

Mon Sep  7 17:22:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_tell): adjustment for ungotten data.

Mon Sep  7 17:13:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_encname_bom_p): removed magic number.

Mon Sep  7 12:26:04 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/irb/inspector.rb (IRB::INSPECTORS.def_inspector): support
	  object without #inspect defined.  a patch from Daniel